[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Bad_Guys/Boss/BG-101-Parts/BG-101-Boss-Small-Box.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Bad_Guys/Boss/BG-101-Parts/BG-101-Boss-Top.tscn" type="PackedScene" id=2]
[ext_resource path="res://Sprites/Bad_Guys/Boss/BG-101-Boss/BG-101-Boss-Back.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Bad_Guys/Boss/BG-101-Boss/BG-101-Boss-Lines.png" type="Texture" id=4]
[ext_resource path="res://Scripts/Bad_Guys/Boss/Boss-01/BG-101-Boss.gd" type="Script" id=5]

[node name="BG-101-Boss" type="Node2D"]
script = ExtResource( 5 )

[node name="BG-101-Boss-Back" type="Sprite" parent="."]
modulate = Color( 0.611765, 0.611765, 0.611765, 1 )
position = Vector2( 0, -170 )
texture = ExtResource( 3 )

[node name="BG-101-Boss-Lines" type="Sprite" parent="."]
position = Vector2( 0, -170 )
texture = ExtResource( 4 )

[node name="BG-101-Boss-Top" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, -320 )

[node name="Boxes" type="Node2D" parent="."]

[node name="BG-101-Boss-Small-Box" parent="Boxes" instance=ExtResource( 1 )]
position = Vector2( -120, -150 )

[node name="BG-101-Boss-Small-Box2" parent="Boxes" instance=ExtResource( 1 )]
position = Vector2( 0, -150 )

[node name="BG-101-Boss-Small-Box3" parent="Boxes" instance=ExtResource( 1 )]
position = Vector2( 120, -150 )

[node name="BG-101-Boss-Small-Box4" parent="Boxes" instance=ExtResource( 1 )]
position = Vector2( -119, -250 )
can_shoot = true

[node name="BG-101-Boss-Small-Box5" parent="Boxes" instance=ExtResource( 1 )]
position = Vector2( 0, -250 )

[node name="BG-101-Boss-Small-Box6" parent="Boxes" instance=ExtResource( 1 )]
position = Vector2( 120, -250 )
can_shoot = true
